--- a/projeto/pom.xml
+++ b/projeto/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.6.0</version> <!-- Verifique a versão mais recente -->
+		</dependency>
 	</dependencies>
 
 	<build>
