--- a/projeto/src/main/resources/application.properties
+++ b/projeto/src/main/resources/application.properties
@@ -1,11 +1,25 @@
 spring.application.name=projeto
 
+# Configurações do banco de dados
 spring.datasource.username=
-
 spring.datasource.password=
-
 spring.datasource.url=
+spring.jpa.properties.hibernate.dialect=
 
-spring.jpa.properties.hibernate.ddl-auto=
 
-server.port=
+spring.jpa.properties.hibernate.ddl-auto=update
+
+# Configuração do servidor
+server.port=8002
+
+# Configurações de e-mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
