--- a/projeto/src/main/resources/application.properties
+++ b/projeto/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=projeto
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.url=
-spring.jpa.properties.hibernate.dialect=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 spring.jpa.properties.hibernate.ddl-auto=update
